--- a/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.html
@@ -364,22 +364,6 @@
                         Un document a été ajouté sur une prestation : {{notification.detail1}}
                       </mat-card-content>
                     </ng-container>
-                    <ng-container *ngIf="notification.notificationType==SERVICE_ADD_ATTACHMENT">
-                      <mat-card-header>
-                        <mat-card-title matBadge="X" matBadgePosition="above before"
-                          [matBadgeHidden]="notification.isRead" matBadgeColor="warn" matBadgeSize="small"
-                          class="hide-text">Document ajouté</mat-card-title>
-                        <mat-card-subtitle><span>{{notification.createdDateTime |date:'EEEE d LLLL yyyy à
-                            HH:mm'}}</span>
-                        </mat-card-subtitle>
-                        <ng-container [ngTemplateOutlet]="cardActions"
-                          [ngTemplateOutletContext]="{notification:notification}">
-                        </ng-container>
-                      </mat-card-header>
-                      <mat-card-content>
-                        Un document a été ajouté sur le service : {{notification.detail1}}
-                      </mat-card-content>
-                    </ng-container>
                     <ng-container *ngIf="notification.notificationType==PROVISION_GUICHET_UNIQUE_STATUS_MODIFIED">
                       <mat-card-header>
                         <mat-card-title matBadge="X" matBadgePosition="above before"
@@ -397,6 +381,32 @@
                       </mat-card-content>
                     </ng-container>
 
+                  </mat-card>
+                </mat-dialog-content>
+              </mat-tab>
+              <mat-tab [label]="getTabLabel(SERVICE_ENTITY_TYPE)"
+                *ngIf="getEntitiesForTab(SERVICE_ENTITY_TYPE).length>0">
+                <mat-dialog-content class="mat-content">
+                  <mat-card appearance="outlined" class="pointer mat-card"
+                    *ngFor="let notification of getEntitiesForTab(SERVICE_ENTITY_TYPE)"
+                    (click)="openEntity($event,notification,SERVICE_ENTITY_TYPE)"
+                    (auxclick)="openEntity($event,notification,SERVICE_ENTITY_TYPE)">
+                    <ng-container *ngIf="notification.notificationType==SERVICE_ADD_ATTACHMENT">
+                      <mat-card-header>
+                        <mat-card-title matBadge="X" matBadgePosition="above before"
+                          [matBadgeHidden]="notification.isRead" matBadgeColor="warn" matBadgeSize="small"
+                          class="hide-text">Document ajouté</mat-card-title>
+                        <mat-card-subtitle><span>{{notification.createdDateTime |date:'EEEE d LLLL yyyy à
+                            HH:mm'}}</span>
+                        </mat-card-subtitle>
+                        <ng-container [ngTemplateOutlet]="cardActions"
+                          [ngTemplateOutletContext]="{notification:notification}">
+                        </ng-container>
+                      </mat-card-header>
+                      <mat-card-content>
+                        Un document a été ajouté sur le service : {{notification.detail1}}
+                      </mat-card-content>
+                    </ng-container>
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
