--- a/client/src/app/modules/miscellaneous/components/edit-refund-label-dialog/edit-refund-label-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/edit-refund-label-dialog/edit-refund-label-dialog.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Modifier le libellé du remboursement</h1>
 <div mat-dialog-content style="margin-top : 15px">
   <generic-input [(model)]="refundLabel" label="refundLabel" [form]="editRefundLabelForm" propertyName="refundLabel"
-    [isMandatory]="true"></generic-input>
+    [maxLength]="250" [isMandatory]="true"></generic-input>
 </div>
 <div mat-dialog-actions align="end">
   <button mat-raised-button color="accent" (click)="onClose()">Annuler</button>
