fix label input provider on banktransfert filter

--- a/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
+++ b/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
@@ -4,7 +4,7 @@
       <tr>
         <td>
           <autocomplete-provider [(model)]="transfertSearch.provider" [form]="transfertForm" propertyName="provider"
-            [isMandatory]="false" label="Fournisseur destinataire"></autocomplete-provider>
+            [isMandatory]="false" label="Fournisseur"></autocomplete-provider>
         </td>
         <td>
           <generic-input [(model)]="transfertSearch.minAmount" label="Montant minimum" [form]="transfertForm"
