--- a/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.css
+++ b/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.css
@@ -16,3 +16,7 @@ td {
   font-family: initial !important;
   font-size: initial !important;
 }
+
+:host ::ng-deep .ck-editor__editable_inline {
+  min-height: 200px;
+}
