dissociation of boolean isOverrideExecutionDate and object BankTransfertSearch

--- a/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
+++ b/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
@@ -52,7 +52,7 @@
       <span>Exporter les résultats affichés</span>
     </button>
     <button mat-menu-item (click)="exportTransferts(true)">
-      <span>Exporter les virements en date du jour</span>
+      <span>Exporter les résultats affichés en date du jour</span>
     </button>
   </mat-menu>
 </button>
