add locked interval on date picker for add-invoice and add-accounting-record components

--- a/client/src/app/modules/accounting/components/add-accounting-record/add-accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/add-accounting-record/add-accounting-record.component.html
@@ -30,7 +30,8 @@
           </td>
           <td>
             <generic-datepicker [(model)]="accountingRecord.operationDateTime" label="Date de l'opération"
-              [form]="accountingRecordForm" propertyName="operationDateTime" [isMandatory]="true">
+              [form]="accountingRecordForm" propertyName="operationDateTime" [isMandatory]="true" [minDate]="minDate"
+              [maxDate]="maxDate">
             </generic-datepicker>
           </td>
         </tr>
