--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1474,6 +1474,14 @@
           </tr>
           <tr>
             <td>
+              <select-service-field-type [(model)]="constant.furtherInformationServiceFieldType"
+                label="Type de champ du service - Informations complémentaires" [form]="constantForm"
+                propertyName="furtherInformationServiceFieldType" [isMandatory]="true"
+                [isDisabled]="!editMode"></select-service-field-type>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <generic-datepicker [(model)]="constant.dateAccountingClosureForAll"
                 label="Date - cloture comptable pour les non comptables" [form]="constantForm"
                 propertyName="dateAccountingClosureForAll" [isMandatory]="true"
