fix and resolve conflict, cherry-pick

--- a/client/src/app/modules/miscellaneous/components/edit-comment-dialog.component/edit-comment-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/edit-comment-dialog.component/edit-comment-dialog.component.html
@@ -4,6 +4,6 @@
     [isMandatory]="isMandatory" [isDisabled]="false" [numberOfLines]="5"></generic-textarea>
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-raised-button color="accent" (click)="onClose()">Annuler</button>
-  <button mat-raised-button color="warn" (click)="onConfirm()">Valider</button>
+  <button mat-raised-button color="accent" (click)="onClose()">Fermer</button>
+  <button mat-raised-button color="warn" (click)="onConfirm()">Enregistrer</button>
 </div>
