--- a/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
+++ b/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
@@ -40,7 +40,16 @@
           </fieldset>
         </tr>
       </table>
-      <table class="full-width" *ngIf="quotation && quotation.responsable">
+      <table class="full-width" *ngIf="quotation.description">
+        <tr>
+          <td>
+            <generic-input [(model)]="quotation.description" label="Description de la demande"
+              [form]="orderingCustomerForm" propertyName="description" [isMandatory]="false"
+              [isDisabled]="true"></generic-input>
+          </td>
+        </tr>
+      </table>
+      <table class="full-width" *ngIf="quotation">
         <tr>
           <td>
             <chips-mail [(model)]="quotation.responsable.mails" label="Mails" [form]="orderingCustomerForm"
