--- a/src/main/resources/mails/templates/send-token.html
+++ b/src/main/resources/mails/templates/send-token.html
@@ -185,13 +185,21 @@
                                                         <tr>
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;padding-top:15px;">
-                                                                <div style="font-family: Arial, sans-serif">
-                                                                    <div
-                                                                        style="font-size: 22px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
-                                                                        <a th:href="${tokenLink}" target="_blank">Se
-                                                                            connecter à MyJSS</a>
-                                                                    </div>
-                                                                </div>
+                                                                <table role="presentation" cellspacing="0"
+                                                                    cellpadding="0" border="0" align="center"
+                                                                    style="margin: auto;">
+                                                                    <tr>
+                                                                        <td
+                                                                            style="border-radius: 3px; background: #c4ae8b; text-align: center;">
+                                                                            <a th:href="${tokenLink}" target="_blank"
+                                                                                style="background: #c4ae8b; border: 15px solid #c4ae8b; border-radius: 3px; font-family: tahoma; font-weight: 900; letter-spacing: 2px; font-size: 16px; mso-height-rule: exactly; line-height: 60px; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: 900; ">
+                                                                                <span style="color:#ffffff">Se connecter
+                                                                                    à
+                                                                                    MyJSS</span>
+                                                                            </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
                                                             </td>
                                                         </tr>
                                                     </table>
